--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
+header {
+  background-color: black;
+  font-size: 10vw;
+  color: white;
+  padding: 2vw;
+}
+
+/* LOG IN PAGE START */
+.logo img {
+  width: 60%;
+  max-height: 30%;
+  display: block;
+  margin: 10% auto;
+}
+
+.loginContainer {
+  width: 80%;
+  top: 40%;
+  left: 10%;
+  border: 5px solid black;
+  border-radius: 25px;
+  margin: auto;
+}
+
+.loginContainer .inputTitle {
+  width: 100%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.loginContainer form div {
+  margin-left: 5%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.loginContainer form div:first-child {
+  margin-bottom: 3%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.loginContainer form input {
+  width: 90%;
 }
 
-.App-link {
-  color: #61dafb;
+.loginContainer div h1 {
+  font-size: 7vw;
+  margin: 3%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.loginContainer div label {
+  font-size: 4vw;
+  display: block;
 }
+
+.buttonContainer {
+  text-align: end;
+  margin: 4% 7%;
+}
+
+.buttonContainer button {
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 5px;
+  font-size: 3.5vw;
+}
+
+.buttonContainer button:active {
+  background-color: #ffdb0055
+}
+
+.message {
+  text-align: center;
+  font-size: 4vw;
+  width: 100%;
+  margin-top: 1%;
+}
+
+/* LOG IN PAGE END */
