--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -1,7 +1,16 @@
 header {
-    background-color: black;
-    font-size: 10vw;
-    color: white;
-    padding: 2vw;
+    background-color: white;
+    font-size: 5vw;
+    text-decoration: none;
+    padding: 4vw 2vw 0vw 2vw;
   }
-  
+
+  header nav {
+    display: flex;
+    justify-content: end;
+  }
+  header a {
+    text-decoration: none;
+    color: black;
+    padding: 0% 2%;
+  }
