Check duplicate user on signup

--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -32,3 +32,8 @@ header {
     display: flex;
     justify-content: space-between;
   }
+
+  .logRegButtonContainer {
+    display: flex;
+    justify-content: flex-end;
+  }
