--- a/src/Styles/MyGames.css
+++ b/src/Styles/MyGames.css
@@ -1,10 +1,9 @@
 .outerContainer {
     display: block;
     width: 94vw;
-    margin-left: 3vw;
+    margin: 0vw 3vw 3vw 3vw;
     border: 2px solid black;
     border-radius: 10px;
-    margin-bottom: 3vw;
 }
 
 .myGamesContainer {
@@ -18,17 +17,6 @@
     height: 5vw;
     margin-left: 2vw;
     margin-right: 1vw;
-}
-
-.rotatedImg {
-    transform: rotate(0deg);
-    transition-duration: 2s;
-    
-}
-
-.rotatedImg2 {
-    transform: rotate(90deg);
-    transition-duration: 5s;
 }
 
 .myGamesContainer p {
