--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -16,7 +16,7 @@ h2 {
 }
 
 .menuButtonContainer {
-    margin: 4vw auto;
+    margin: 0vw auto 4vw auto;
     text-align: center;
 }
 
@@ -52,4 +52,17 @@ button {
 
 .sideButtonDiv :first-child {
     margin: 0 1.5vw 0 0;
+}
+
+.myScoreContainer {
+    margin-left: calc(3vw - 2px);
+    margin-right: calc(3vw - 2px);
+    display: block;
+    width: 94vw;
+    margin: 0vw 3vw 3vw 3vw;
+    /*border: 3px solid black;
+    border-radius: 10px;
+    padding-top: 2vw;*/
+    padding-bottom: 1vw;
+    margin-bottom: 0px;
 }
