--- a/src/Styles/CreateGame.css
+++ b/src/Styles/CreateGame.css
@@ -23,6 +23,8 @@
 .createGameForm div button {
     font-size: 4vw;
     padding: 1vw;
+    border: 1px solid black;
+    border-radius: 5px;
 }
 
 .notErrorLobbyDiv {
