--- a/src/Styles/ManageLobby.css
+++ b/src/Styles/ManageLobby.css
@@ -4,6 +4,10 @@
     border: 2px solid black;
     margin-bottom: 3vw;
     border-radius: 10px;
+}
+
+
+.flexLobbyContainer {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,4 +36,35 @@
     border: 2px solid black;
     background-color: lightcoral;
     padding: 2vw;
+}
+
+
+.areYouSure {
+    margin: 0vw 3vw 3vw 3vw;
+    border: 2px solid black;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.areYouSure p {
+    margin: 3vw 0vw 3vw 3vw;
+    padding: 0vw;
+}
+
+.areYouSure button {
+    font-size: 4.5vw;
+    padding: 2vw;
+}
+
+.areYouSure div :first-child {
+    margin: 3vw;
+    border: 2px solid black;
+    background-color: lightcoral;
+}
+
+.areYouSure div :last-child {
+    margin: 3vw 3vw 3vw 0vw;
+    border: 2px solid black;
 }
