--- a/src/Styles/MyGames.css
+++ b/src/Styles/MyGames.css
@@ -40,3 +40,60 @@
     border: 2px solid black;
     margin-right: 2vw;
 }
+
+h4 {
+    font-size: 4.5vw;
+}
+
+.podiumOne {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 3vw;
+}
+
+.podiumOne img {
+    width: 15vw;
+    height: 15vw;
+}
+
+.podiumOne p {
+    margin-left: 2vw;
+    padding: 0;
+    font-size: 7vw;
+}
+
+.podiumTwo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 3vw;
+}
+
+.podiumTwo img {
+    width: 12vw;
+    height: 12vw;
+}
+
+.podiumTwo p {
+    margin-left: 2vw;
+    padding: 0;
+    font-size: 6vw;
+}
+
+.podiumThree {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 3vw;
+}
+
+.podiumThree img {
+    width: 10vw;
+    height: 10vw;
+}
+
+.podiumThree p {
+    margin-left: 2vw;
+    padding: 0;
+}
