--- a/src/Styles/Login.css
+++ b/src/Styles/Login.css
@@ -1,6 +1,10 @@
+.logo {
+  width: 80%;
+  margin-left: 12.5%;
+}
+
 .logo img {
-    width: 60%;
-    max-height: 30%;
+    width: 100%;
     display: block;
     margin: 0% auto 8% auto;
   }
@@ -10,7 +14,7 @@
     top: 40%;
     left: 10%;
     border: 4px solid black;
-    border-radius: 25px;
+    border-radius: 15px;
     margin: auto;
   }
   
@@ -32,6 +36,7 @@
   .loginContainer form input {
     width: 100%;
     font-size: 4vw;
+    padding: 1.5vw;
   }
   
   .loginContainer div h1 {
@@ -53,6 +58,7 @@
     border: 1px solid rgb(0, 0, 0);
     border-radius: 5px;
     font-size: 4vw;
+    padding: 1.5vw;
   }
   
   .buttonContainer button:active {
