--- a/src/Styles/Signup.css
+++ b/src/Styles/Signup.css
@@ -1,16 +1,10 @@
-.logo img {
-    width: 55%;
-    max-height: 25%;
-    display: block;
-    margin: 0% auto 8% auto;
-  }
-  
+ 
   .signupContainer {
     width: 80%;
     top: 40%;
     left: 10%;
     border: 4px solid black;
-    border-radius: 25px;
+    border-radius: 15px;
     margin: auto;
   }
   
@@ -28,6 +22,7 @@
   .signupContainer form input {
     width: 100%;
     font-size: 4vw;
+    padding: 1.5vw;
   }
 
   .signupContainer form {
