--- a/src/Styles/CreateGame.css
+++ b/src/Styles/CreateGame.css
@@ -25,6 +25,8 @@
     padding: 1vw;
     border: 2px solid black;
     border-radius: 5px;
+    background-color: #787c7fff;
+    color: white;
 }
 
 .notErrorLobbyDiv {
