--- a/src/Styles/EnterScore.css
+++ b/src/Styles/EnterScore.css
@@ -31,4 +31,6 @@ p {
     border: 2px solid black;
     border-radius: 5px;
     padding: 2vw;
+    background-color: #787c7fff;
+    color: white;
 }
