--- a/src/Styles/ManageLobby.css
+++ b/src/Styles/ManageLobby.css
@@ -36,7 +36,6 @@
 
 .rightContent button {
     font-size: 4vw;
-    color: black;
     border: 2px solid black;
     background-color: lightcoral;
     padding: 2vw;
@@ -72,6 +71,7 @@
 .areYouSure div :last-child {
     margin: 3vw 3vw 3vw 0vw;
     border: 2px solid black;
+    background-color: rgb(207, 207, 207);
 }
 
 .successContainerJoinDelete {
