--- a/src/Styles/JoinGame.css
+++ b/src/Styles/JoinGame.css
@@ -37,7 +37,7 @@
 
 .lobbyInputButtonContainer {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     width: 100%;
 }
 
