--- a/src/Styles/CreateGame.css
+++ b/src/Styles/CreateGame.css
@@ -5,7 +5,6 @@
 
 .createGameForm {
     padding: 0vw;
-    width: 100%;
 }
 
 .createGameForm div {
@@ -14,20 +13,13 @@
 }
 
 .createGameForm div input {
-    flex-grow: 1;
-    margin-right: 2vw;
     font-size: 4.5vw;
     padding: 1vw;
+    width: 100%;
+    flex-grow: 1;
+    margin-bottom: 3vw;
 }
 
-.createGameForm div button {
-    font-size: 4.5vw;
-    padding: 1vw;
-    border: 2px solid black;
-    border-radius: 5px;
-    background-color: #787c7fff;
-    color: white;
-}
 
 .notErrorLobbyDiv {
     border: 2px solid black;
@@ -72,4 +64,19 @@
     display: flex;
     justify-content: space-between;
     margin: 3vw 0vw 0vw 0vw;
+}
+
+.brokenButContainer {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.brokenButContainer button {
+    font-size: 4.5vw;
+    padding: 1vw;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: #787c7fff;
+    color: white;
 }
