--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -67,3 +67,8 @@ button {
     border-radius: 10px;
     padding-top: 2vw;*/
 }
+
+.menuButtonContainer a {
+    text-decoration: none;
+    color: white;
+}
