--- a/src/Styles/CreateGame.css
+++ b/src/Styles/CreateGame.css
@@ -42,6 +42,7 @@
     color: black;
     display: flex;
     justify-content: space-between;
+    white-space: pre-wrap;
 }
 
 .createGameContainer {
@@ -64,6 +65,7 @@
     display: flex;
     justify-content: space-between;
     margin: 3vw 0vw 0vw 0vw;
+    white-space: pre-wrap;
 }
 
 .brokenButContainer {
