--- a/src/Styles/ScoreTable.css
+++ b/src/Styles/ScoreTable.css
@@ -32,8 +32,10 @@ table tr {
 .scores div th {
     width: 19vw;
     min-width: 19vw;
+    max-width: 19vw;
     text-align: left;
     padding-left: 1vw;
+    overflow: auto;
 }
 
 .days td {
