--- a/src/Styles/Signup.css
+++ b/src/Styles/Signup.css
@@ -1,78 +1,153 @@
- 
-  .signupContainer {
-    width: 80%;
-    top: 40%;
-    left: 10%;
-    border: 4px solid black;
-    border-radius: 15px;
-    margin: auto;
-  }
-  
-  .signupContainer .inputTitle {
-    width: 100%;
-    text-align: center;
-  }
-  
-  .signupContainer form div {
-    margin-left: 4vw;
-    margin-right: 4vw;
-    margin-bottom: 3%;
-  }
-  
-  .signupContainer form input {
-    width: 100%;
-    font-size: 4vw;
-    padding: 1.5vw;
-  }
+ .signupContainer {
+   width: 80%;
+   top: 40%;
+   left: 10%;
+   border: 4px solid black;
+   border-radius: 15px;
+   margin: auto;
+ }
 
-  .signupContainer form {
-    margin-bottom: 0;
-  }
-  
-  .signupContainer div h1 {
-    font-size: 7vw;
-    margin: 2vw;
-  }
-  
-  .signupContainer div label {
-    font-size: 4vw;
-    display: block;
-  }
-  
-  .buttonContainer {
-    text-align: end;
-    margin: 3vw 4vw;
-  }
-  
-  .buttonContainer button {
-    border: 2px solid rgb(0, 0, 0);
-    border-radius: 5px;
-    font-size: 4vw;
-    font-weight: bolder;
-  }
-  
-  .buttonContainer button:active {
-    background-color: #ffdb0055
-  }
-  
-  .signupMessage {
-    text-align: center;
-    font-size: 4vw;
-    width: 100%;
-    margin-top: 1vw;
-    margin-bottom: 4vw;
-  }
-  
-  .signupMessage span {
-    text-decoration: underline;
-  }
+ .signupContainer .inputTitle {
+   width: 100%;
+   text-align: center;
+ }
 
-  .errorDiv {
-    border: 2px solid red;
-    border-radius: 5px;
-  }
+ .signupContainer form div {
+   margin-left: 4vw;
+   margin-right: 4vw;
+   margin-bottom: 3%;
+ }
 
-  .notErrorDiv {
-    border: 2px solid black;
-    border-radius: 5px;
-  }
+ .signupContainer form input {
+   width: 100%;
+   font-size: 4vw;
+   padding: 1.5vw;
+ }
+
+ .signupContainer form {
+   margin-bottom: 0;
+ }
+
+ .signupContainer div h1 {
+   font-size: 7vw;
+   margin: 2vw;
+ }
+
+ .signupContainer div label {
+   font-size: 4vw;
+   display: block;
+ }
+
+ .buttonContainer {
+   text-align: end;
+   margin: 3vw 4vw;
+ }
+
+ .buttonContainer button {
+   border: 2px solid rgb(0, 0, 0);
+   border-radius: 5px;
+   font-size: 4vw;
+   font-weight: bolder;
+ }
+
+ .buttonContainer button:active {
+   background-color: #ffdb0055
+ }
+
+ .signupMessage {
+   text-align: center;
+   font-size: 4vw;
+   width: 100%;
+   margin-top: 1vw;
+   margin-bottom: 4vw;
+ }
+
+ .signupMessage span {
+   text-decoration: underline;
+ }
+
+ .errorDiv {
+   border: 2px solid red;
+   border-radius: 5px;
+ }
+
+ .notErrorDiv {
+   border: 2px solid black;
+   border-radius: 5px;
+ }
+
+ /* For larger than phone screen size (Desktops or iPads) */
+ @media only screen and (min-width: 601px) {
+   .mainContainer {
+     display: flex;
+     justify-content: center;
+     position: absolute;
+     width: 1200px;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+   }
+
+   .main {
+     width: 50%;
+     max-width: 600px;
+     margin: auto;
+   }
+
+   .signupContainer {
+     margin: 0px 0px 0px 50px;
+   }
+
+   .signupContainer form input {
+     font-size: 25px;
+     padding: 10px;
+   }
+
+   .signupContainer form div {
+     margin-left: 20px;
+     margin-right: 20px;
+     margin-bottom: 20px;
+   }
+
+   .signupContainer div h1 {
+     font-size: 45px;
+     margin: 12px;
+   }
+
+   .buttonContainer {
+     margin: 20px 20px;
+   }
+
+   .buttonContainer button {
+     font-size: 25px;
+     padding: 10px 20px;
+   }
+
+   .buttonContainer button:hover {
+     cursor: pointer;
+     background-color: #69a964;
+   }
+
+   .signupMessage {
+     text-align: center;
+     font-size: 20px;
+     width: 480px;
+     margin-top: 8px;
+     margin-bottom: 0px;
+     margin-left: 50px;
+   }
+
+   .logo {
+     width: 600px;
+     margin: auto;
+     display: flex;
+     align-items: end;
+   }
+
+   .logo img {
+     width: 550px;
+     display: block;
+     margin: auto;
+     max-width: none;
+   }
+ }
