--- a/src/Styles/MyGames.css
+++ b/src/Styles/MyGames.css
@@ -104,3 +104,10 @@ h4 {
 p a {
     text-decoration: underline;
 }
+
+/* For larger than phone screen size (Desktops or iPads) */
+@media only screen and (min-width: 601px) {
+    h4 {
+        font-size: 30px;
+    }
+}
